# pdfsum

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: functional-design.md
src/pdfsum/: __init__.py  __main__.py  digest_runner.py  errors.py
src/pdfsum/cli/: __init__.py  app.py  display.py  init.py
src/pdfsum/config/: __init__.py  manager.py
src/pdfsum/digest/: __init__.py  sink.py  source.py
src/pdfsum/engines/: __init__.py  base.py  chunked.py  claude.py  factory.py  gemini.py  openai.py
src/pdfsum/extractors/: __init__.py  pdf_extractor.py
src/pdfsum/models/: __init__.py  summary.py
src/pdfsum/repositories/: __init__.py  base.py  sqlite.py
src/pdfsum/services/: __init__.py  summarize_service.py
tests/: conftest.py
tests/e2e/: conftest.py  test_cli.py
tests/unit/: test_app.py  test_base.py  test_chunked.py  test_claude.py  test_cmd_init.py  test_config_manager.py  test_digest_runner.py  test_display.py  test_errors.py  test_factory.py  test_gemini.py  test_length_dogfood.py  test_models.py  test_openai.py  test_pdf_extractor.py  test_pdfsum_sink.py  test_public_api.py  test_single_file_source.py  test_sqlite_repository.py  test_summarize_service.py
