[project]
name = "pdfsum"
version = "0.1.0"
description = "PDFドキュメント要約CLIツール"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pypdfium2>=4.0",
    "httpx>=0.27,<1.0",
    "tomli-w>=1.0",
    "python-dotenv>=1.2.1",
    "platformdirs>=4.0",
    # digestkit (inboxkit monorepo配下、PyPI未公開) — ドッグフーディング目的で追加。
    # 現状 inboxkit のリモート main にはまだ packages/digestkit が公開されていないため、
    # ローカルパス依存で導入する。inboxkit が公開されたら git URL or PyPI 参照へ切替予定。
    # NOTE: `notion` extra も付けないと ``digestkit.sources.__init__`` が
    # NotionDatabaseSource を eager import して失敗する (digestkit 0.1.0 の不具合)。
    "digestkit[pdf,notion]",
]

[tool.uv.sources]
digestkit = { path = "../inboxkit/packages/digestkit", editable = true }

[project.scripts]
pdfsum = "pdfsum.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdfsum"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.11",
    "reportlab>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["pypdfium2", "pypdfium2.*", "reportlab.*"]
ignore_missing_imports = true
