[project]
name = "pdfsum"
version = "0.1.0"
description = "PDFドキュメント要約CLIツール"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "digestkit[pdf]",
    "platformdirs>=4.0",
    "python-dotenv>=1",
]

[project.optional-dependencies]
dev = [
    "pip>=26",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "pyright>=1.1",
    "reportlab>=4.0",
]

[project.scripts]
pdfsum = "pdfsum.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdfsum"]

[tool.uv.sources]
digestkit = { path = "vendor/digestkit-0.1.0-py3-none-any.whl" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
