[project]
name = "pdfsum"
version = "0.2.1"
description = "PDFドキュメント要約CLIツール"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "digestkit[pdf]>=0.1.0,<0.2",
    "platformdirs>=4.0",
    "python-dotenv>=1",
]

[project.optional-dependencies]
dev = [
    "pip>=26",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "pyright>=1.1",
    "reportlab>=4.0",
]

[project.scripts]
pdfsum = "pdfsum.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdfsum"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
# 日本語コードベースの慣習: 全角括弧/カンマ等の "ambiguous unicode" 警告は抑制.
# RUF001 (string), RUF002 (docstring), RUF003 (comment) はいずれも本来 ASCII 文字に
# 似た日本語全角文字を検出するもので、ユーザー向けメッセージ・docstring が日本語の
# 本プロジェクトでは false positive ノイズが多いため ignore する.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
